# mathesar-client

./: README.md  api.md  pyproject.toml  test.py
.github/workflows/: pypi-deploy.yml
src/mathesar-client/: client_raw.py
src/mathesar_client/: __init__.py  client.py  client_raw.py  client_raw_models.py
