[project]
name = "mathesar-client"
version = "0.1.0"
description = "A Python client for Mathesar API"
authors = [
    { name = "Adam Hlavacek", email = "git@adamhlavacek.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/esoadamo/mathesar-client"
Issues = "https://github.com/esoadamo/mathesar-client/issues"
